--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <div class="page">
-
-  </div>
+<div class="page">
+<header class="header">
+<img src="images/logo_place_header.svg" alt="#" class="logo logo__place_header">
+<h1 class="header__title">Научиться учиться</h1>
+<p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
+  <a href="#">Узнать →</a>
+</p>
+<img src="images/header-image.png" alt="#" class="header__main-illustration">
+<div class="header__square-pic"></div>
+</header>
+</div>
 </body>
 </html>
