--- a/index.html
+++ b/index.html
@@ -18,6 +18,185 @@
 <img src="images/header-image.png" alt="#" class="header__main-illustration">
 <div class="header__square-pic"></div>
 </header>
+<section class="description">
+  <div class="two_columns">
+    <h2 class="brief">Главные проблемы в обучении</h2>
+    <div class="main-text">
+    <p class="main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+    <p class="main-text_paragraph"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+</p>
+<p class="main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
 </div>
+  </div>
+</section>
+<section class="techniques">
+  <h2 class="techniques__title">Техники обучения</h2>
+  <p class="techniques__subtitle">Пять практик от Барбары Оакли</p>
+  <cards>
+    <item class="cards">
+    <div class="item">
+    <img src="images/cards-attention.png" alt="#" class="cards_cards-attention">
+    <h2>Два вида внимания</h2>
+    <p>Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+  </div>
+  <div class="item">
+    <img src="images/cards-recall.png" alt="#" class="cards_cards-recall">
+    <h2>Recall</h2>
+    <p>Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+    </div>
+    <div class="item"> 
+    <img src="images/cards-interliving.png" alt="#" class="cards_cards-interliving">
+<h2>Интерливинг</h2>
+<p>Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+  </div>
+  <div class="item">
+    <img src="images/cards-question.png" alt="#" class="cards__cards-question">
+<h2>Вопросы</h2>
+<p>Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+  </div>
+  <div class="item"> 
+    <img src="images/cards-competence.png" alt="#" class="cards__cards-competence"> 
+  <h2>Иллюзия компетентности</h2>
+  <p>Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+  </div>
+</item>
+</cards>
+</section>
+<section class="digits">
+  <h2 class="digits__title">Цифры и факты</h2>
+  <p class="digits__subtitle">Про учёбу и мозг</p>
+  <div class="table">
+    <div class="table__cell">
+    <h2 class="table__cell_heading">86 миллиардов</h2>
+    <p class="table__cell_text">Число нейронов в мозге человека</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">2.1 миллиарда</h2>
+    <p class="table__cell_text">Число нуждающихся в повышении квалификации
+      Всемирный Банк, 2017</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">1000 терабайт</h2>
+    <p class="table__cell_text">Объём памяти человека</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">500 триллионов</h2>
+    <p class="table__cell_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">420 миллионов</h2>
+    <p class="table__cell_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+      Всемирный Банк, 2017</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">17–20 лет</h2>
+    <p class="table__cell_text">Пик обучаемости</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">1885 год</h2>
+    <p class="table__cell_text">Открытие кривой забывания</p>
+  </div>
+  <div class="table__cell">
+    <h2 class="table__cell_heading">1889 год</h2>
+    <p class="table__cell_text">Открытие условного рефлекса
+    </p>
+  </div>
+</div>
+</section>
+<section class="kaufman">
+  <h2 class="kaufman__title">Принципы обучения</h2>
+  <p class="kaufman__subtitle">от Джоша Кауфмана</p>
+<div class="table_theme_dark">
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">1</h2><p class="table__text_theme_dark">Выберите привлекательный проект.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">2</h2><p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">3</h2><p class="table__text_theme_dark">Определите целевой уровень мастерства.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">4</h2><p class="table__text_theme_dark">Разбейте навык на элементы.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">5</h2><p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">6</h2><p class="table__text_theme_dark">Устраните препятствия для занятий.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">7</h2><p class="table__text_theme_dark">Выделите специальное время для занятий.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">8</h2><p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">9</h2><p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></div>
+<div class="kaufman_subtitle"><h2 class="table__heading_theme_dark">10</h2><p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p></div>
+</div>
+</section>
+<section class="resources">
+  <h2 class="resources__section-title">Полезные ресурсы</h2>
+  <p class="resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+  <div class="resources__logo-zone">
+  <div class="resources__link">
+<img src="images/logo/resources-arzamas.svg" alt="#">
+</div>
+<div class="resources__link">
+  <img src="images/logo/resources-n1.svg" alt="#">
+</div>
+<div class="resources__link">
+  <img src="images/logo/resources-strelka.svg" alt="#">
+</div>
+<div class="resources__link">
+  <img src="images/logo/resources-polka.svg" alt="#">
+</div>
+</div>
+</section>
+<footer>
+<div class="columns">
+<div class="content_copyright">
+  <img src="images/logo_place_footer.svg" alt="#" class="logo__place_footer">
+  <h2 class="footer_author">&copy; Виктор Абанькин</h2>
+</div>
+<div class="content_info">
+<h2 class="column-heading">О Практикуме</h2>
+<div  class="column-link"><a href="#" class="column-links">Главная</a></div>
+<div  class="column-link"><a href="#" class="column-links">Концепция</a></div>
+<div  class="column-link"><a href="#" class="column-links">Наставники</a></div>
+</div>
+<div class="content_social">
+  <h2 class="column-heading">Соцсети</h2>
+
+
+
+
+  <div  class="column-link">   
+  <div>  
+  <a href="#"  class="column-links"><img src="images/youtube-icon.svg" alt="#" class="social-icon">
+  </div>  
+  <div>  
+  <p class="column-links">YouTube</p>
+  
+  </div> 
+</a>
+  </div>  
+  
+
+
+  <div  class="column-link">
+  <div>
+    <a href="#"  class="column-links"><img src="images/vk_color_white.svg" alt="#" class="social-icon">
+  </div>
+  <div>
+  <p class="column-links">ВКонтакте</p>
+
+  </div>
+</a>
+  </div>
+
+  <div  class="column-link">
+  <div>
+    <a href="#"  class="column-links"><img src="images/tiktok-icon.svg" alt="#" class="social-icon">
+  </div>
+  <div>
+  <p class="column-links">TikTok</p>
+ 
+  </div>
+</a>
+  </div>
+</div>
+ 
+
+
+
+</div>
+</div>
+</div>
+</footer>
 </body>
 </html>
