--- a/index.html
+++ b/index.html
@@ -146,95 +146,62 @@
         </div>
       </div>
     </section>
-
-
-
-
-</body>
-</page>
-
-
-<!--
-
-
-<section class="resources">
-  <h2 class="resources__section-title">Полезные ресурсы</h2>
-  <p class="resources__section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-  <div class="resources__logo-zone">
-  <div class="resources__link">
-<img src="images/logo/resources-arzamas.svg" alt="#">
-</div>
-<div class="resources__link">
-  <img src="images/logo/resources-n1.svg" alt="#">
-</div>
-<div class="resources__link">
-  <img src="images/logo/resources-strelka.svg" alt="#">
-</div>
-<div class="resources__link">
-  <img src="images/logo/resources-polka.svg" alt="#">
-</div>
-</div>
-</section>
-<footer>
-<div class="columns">
-<div class="content_copyright">
-  <img src="images/logo_place_footer.svg" alt="#" class="logo__place_footer">
-  <h2 class="footer_author">&copy; Виктор Абанькин</h2>
-</div>
-<div class="content_info">
-<h2 class="column-heading">О Практикуме</h2>
-<div  class="column-link"><a href="#" class="column-links">Главная</a></div>
-<div  class="column-link"><a href="#" class="column-links">Концепция</a></div>
-<div  class="column-link"><a href="#" class="column-links">Наставники</a></div>
-</div>
-<div class="content_social">
-  <h2 class="column-heading">Соцсети</h2>
-
-
-
-
-  <div  class="column-link">   
-  <div>  
-  <a href="#"  class="column-links"><img src="images/youtube-icon.svg" alt="#" class="social-icon">
-  </div>  
-  <div>  
-  <p class="column-links">YouTube</p>
-  
-  </div> 
-</a>
-  </div>  
-  
-
-
-  <div  class="column-link">
-  <div>
-    <a href="#"  class="column-links"><img src="images/vk_color_white.svg" alt="#" class="social-icon">
-  </div>
-  <div>
-  <p class="column-links">ВКонтакте</p>
-
-  </div>
-</a>
-  </div>
-
-  <div  class="column-link">
-  <div>
-    <a href="#"  class="column-links"><img src="images/tiktok-icon.svg" alt="#" class="social-icon">
-  </div>
-  <div>
-  <p class="column-links">TikTok</p>
- 
-  </div>
-</a>
-  </div>
-</div>
- 
-
-
-
-</div>
-</div>
-</div>
-</footer>
-</body>
+    <section class="resources">
+      <h2 class="section_title">Полезные ресурсы</h2>
+      <p class="section_subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <div class="resources__logo-zone">
+        <a href="#"><div class="resources__link">
+          <img src="images/logo/resources-arzamas.svg" alt="#">
+        </a>     
+      </div>
+      <div class="resources__link">
+        <a href="#"><img src="images/logo/resources-n1.svg" alt="#">
+        </a>
+      </div>
+      <div class="resources__link">
+        <a href="#"><img src="images/logo/resources-strelka.svg" alt="#">
+        </a>
+      </div>
+      <div class="resources__link">
+        <a href="#"><img src="images/logo/resources-polka.svg" alt="#">
+        </a>
+      </div>
+    </section>
+    <footer>
+      <div class="columns">
+        <div class="footer__column_content_copyright">
+          <img src="images/logo_place_footer.svg" alt="#" class="logo__place_footer">
+          <h2 class="footer_author">&copy; Виктор Абанькин</h2>
+        </div>
+        <nav class="footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+            <li  class="footer__column-link"><a href="#" class="footer__column-link-text">Главная</a></li>
+            <li  class="footer__column-link"><a href="#" class="footer__column-link-text">Концепция</a></li>
+            <li  class="footer__column-link"><a href="#" class="footer__column-link-text">Наставники</a></li>
+          </ul>
+        </nav>
+        <nav class="footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul  class="footer__column-links">   
+            <li class="footer__column-link">  
+              <a href="#" class="footer__column-link-li"><img src="images/youtube-icon.svg" alt="#" class="social-icon">
+              <p class="footer__column-link-text">YouTube</p>
+              </a>
+            </li> 
+            <li  class="footer__column-link">
+              <a href="#" class="footer__column-link-li"><img src="images/vk_color_white.svg" alt="#" class="social-icon">
+              <p class="footer__column-link-text">ВКонтакте</p>
+              </a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-li"><img src="images/tiktok-icon.svg" alt="#" class="social-icon">
+              <p class="footer__column-link-text">TikTok</p>
+              </a>
+            </li>
+          </ul>  
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
