--- a/index.html
+++ b/index.html
@@ -16,49 +16,73 @@
         <a href="#" class="header__link">Узнать →</a>
       </p>
       <img src="images/header-image.png" alt="#" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation_animated"></div>
     </header>
     <section class="description">
       <div class="two_columns">
         <h2 class="two_columns__brief">Главные проблемы в обучении</h2>
-      <div class="two_columns__main-text">
-      <p class="two_columns__main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-      <p class="two_columns__main-text_paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-      <p class="two_columns__main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        <div class="two_columns__main-text">
+          <p class="two_columns__main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+          <p class="two_columns__main-text_paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class="two_columns__main-text_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </div>
       </div>
-    </div>
     </section>
     <section class="techniques">
       <h2 class="section_title">Техники обучения</h2>
       <p class="section_subtitle">Пять практик от Барбары Оакли</p>
-      <cards class="cards">
-      <div class="cards__item">
-        <img src="images/cards-attention.png" alt="#" class="cards__image">
-        <h2 class="cards__title">Два вида внимания</h2>
-        <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+      <div class="cards">
+        <div class="cards__item">
+          <img src="images/cards-attention.png" alt="#" class="cards__image">
+          <h2 class="cards__title">Два вида внимания</h2>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </div>
+        <div class="cards__item">
+          <img src="images/cards-recall.png" alt="#" class="cards__image">
+          <h2 class="cards__title">Recall</h2>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </div>
+        <div class="cards__item"> 
+          <img src="images/cards-interliving.png" alt="#" class="cards__image">
+          <h2 class="cards__title">Интерливинг</h2>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </div>
+        <div class="cards__item">
+          <img src="images/cards-question.png" alt="#" class="cards__image">
+          <h2 class="cards__title">Вопросы</h2>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </div>
+        <div class="cards__item"> 
+          <img src="images/cards-competence.png" alt="#" class="cards__image"> 
+          <h2 class="cards__title">Иллюзия компетентности</h2>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </div>
       </div>
-      <div class="cards__item">
-        <img src="images/cards-recall.png" alt="#" class="cards__image">
-        <h2 class="cards__title">Recall</h2>
-        <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-      </div>
-      <div class="cards__item"> 
-        <img src="images/cards-interliving.png" alt="#" class="cards__image">
-        <h2 class="cards__title">Интерливинг</h2>
-        <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-       </div>
-      <div class="cards__item">
-        <img src="images/cards-question.png" alt="#" class="cards__image">
-        <h2 class="cards__title">Вопросы</h2>
-        <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-      </div>
-      <div class="cards__item"> 
-        <img src="images/cards-competence.png" alt="#" class="cards__image"> 
-        <h2 class="cards__title">Иллюзия компетентности</h2>
-        <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-      </div>
-      </cards>
     </section>
+    <section class="video"> 
+      <h2 class="section_title">Видео на TED</h2>
+      <p class="section_subtitle">Для тех, кто любит прокрастинировать</p>
+      <div class="video__iframe">
+        <iframe  class="video__iframe_margin" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+    </section>
+    <section class="oakley"> 
+      <div class="two_columns">
+        <h2 class="two_columns__brief">История Барбарь Оакли</h2>
+        <div class="two_columns__main-text">
+          <p class="two_columns__main-text_paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
+    <section class="feynman"> 
+      <dev class="feynman__content">
+        <img src="images/feynman.png" alt="#" class="feynman__main-illustration">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#"><p class="feynman__link">Подробнее →</p></a>
+      </dev>
+    </section> 
     <section class="digits">
       <h2 class="section_title">Цифры и факты</h2>
       <p class="section_subtitle">Про учёбу и мозг</p>
@@ -99,7 +123,21 @@
         </div>
       </div>
     </section>
+    <section class="khan">  
+      <div class="khan__container">
+        <h2 class="khan__container_author">Салман Хан</h2>
+        <p class="khan__container_title">Весь мир - школа</p>
+        <p class="khan__container_quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p> 
+        <p class="khan__container_quote-author">Джордж Лукас</p>
+        <p class="khan__container_quote-author-subline">Кинорежиссёр, продюсер</p>
+        <div class="khan__book-container">
+          <img src="images/khan-book.jpg" alt="#" class="khan__book-container_book-pic">
+          <a href="#" class="khan__book-container_buy-link"><p class="khan__book-container_buy-link_text">Купить книгу →</p></a>
+        </div>
+      </div> 
+    </section>
     <section class="kaufman">
+      <img src="images/kaufman-triangle.svg"#" class="kaufman__triangle rotation_animated">
       <h2 class="section_title_theme_dark">Принципы обучения</h2>
       <p class="section_subtitle_theme_dark">от Джоша Кауфмана</p>
       <div class="table_theme_dark">
@@ -149,21 +187,16 @@
       <h2 class="section_title">Полезные ресурсы</h2>
       <p class="section_subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
-        <a href="#"><div class="resources__link">
-          <img src="images/logo/resources-arzamas.svg" alt="#">
-        </a>     
+        <a href="#"><div class="resources__link"><img src="images/logo/resources-arzamas.svg" alt="#"></a>     
       </div>
       <div class="resources__link">
-        <a href="#"><img src="images/logo/resources-n1.svg" alt="#">
-        </a>
+        <a href="#"><img src="images/logo/resources-n1.svg" alt="#"></a>
       </div>
       <div class="resources__link">
-        <a href="#"><img src="images/logo/resources-strelka.svg" alt="#">
-        </a>
+        <a href="#"><img src="images/logo/resources-strelka.svg" alt="#"></a>
       </div>
       <div class="resources__link">
-        <a href="#"><img src="images/logo/resources-polka.svg" alt="#">
-        </a>
+        <a href="#"><img src="images/logo/resources-polka.svg" alt="#"></a>
       </div>
     </section>
     <footer>
