--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="pages/index.css">
 </head>
-<page>
-  <body class="page">
-    <header class="header">
-      <img src="images/logo_place_header.svg" alt="#" class="logo__place_header">
+<body class="page">
+  <header class="header">
+      <img src="images/logo_place_header.svg" alt='Логотип "Яндекс Практикум"' class="logo__place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
         <a href="#" class="header__link">Узнать →</a>
       </p>
-      <img src="images/header-image.png" alt="#" class="header__main-illustration">
+      <img src="images/header-image.png" alt="Картина грустного мальчика с весёлой собакой" class="header__main-illustration">
       <div class="header__square-pic rotation_animated"></div>
-    </header>
+  </header>
+  <main>
     <section class="description">
       <div class="two_columns">
         <h2 class="two_columns__brief">Главные проблемы в обучении</h2>
@@ -33,28 +32,28 @@
       <p class="section_subtitle">Пять практик от Барбары Оакли</p>
       <div class="cards">
         <div class="cards__item">
-          <img src="images/cards-attention.png" alt="#" class="cards__image">
-          <h2 class="cards__title">Два вида внимания</h2>
+          <img src="images/cards-attention.png" alt="Книга в руках" class="cards__image">
+          <h3 class="cards__title">Два вида внимания</h3>
           <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
         </div>
         <div class="cards__item">
-          <img src="images/cards-recall.png" alt="#" class="cards__image">
-          <h2 class="cards__title">Recall</h2>
+          <img src="images/cards-recall.png" alt="Античная статуя человека" class="cards__image">
+          <h3 class="cards__title">Recall</h3>
           <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
         </div>
         <div class="cards__item"> 
-          <img src="images/cards-interliving.png" alt="#" class="cards__image">
-          <h2 class="cards__title">Интерливинг</h2>
+          <img src="images/cards-interliving.png" alt="Большое окрытое необычное строение с людьми " class="cards__image">
+          <h3 class="cards__title">Интерливинг</h3>
           <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
         </div>
         <div class="cards__item">
-          <img src="images/cards-question.png" alt="#" class="cards__image">
-          <h2 class="cards__title">Вопросы</h2>
+          <img src="images/cards-question.png" alt="3D черная модель человека в углу помещения" class="cards__image">
+          <h3 class="cards__title">Вопросы</h3>
           <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
         </div>
         <div class="cards__item"> 
-          <img src="images/cards-competence.png" alt="#" class="cards__image"> 
-          <h2 class="cards__title">Иллюзия компетентности</h2>
+          <img src="images/cards-competence.png" alt="Несколько книг стопкой на руке" class="cards__image"> 
+          <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
         </div>
       </div>
@@ -77,10 +76,10 @@
     </section>
     <section class="feynman"> 
       <dev class="feynman__content">
-        <img src="images/feynman.png" alt="#" class="feynman__main-illustration">
+        <img src="images/feynman.png" alt="Полупрофиль Фейнмана черно-белый по грудь" class="feynman__main-illustration">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#"><p class="feynman__link">Подробнее →</p></a>
+        <a href="#" class="feynman__link">Подробнее →</a>
       </dev>
     </section> 
     <section class="digits">
@@ -92,33 +91,33 @@
           <p class="table__text">Число нейронов в мозге человека</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">2.1 миллиарда</h2>
+          <h3 class="table__heading">2.1 миллиарда</h3>
           <p class="table__text">Число нуждающихся в повышении квалификации</p>
           <p class="table__text">Всемирный Банк, 2017</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">1000 терабайт</h2>
+          <h3 class="table__heading">1000 терабайт</h3>
           <p class="table__text">Объём памяти человека</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">500 триллионов</h2>
+          <h3 class="table__heading">500 триллионов</h3>
           <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">420 миллионов</h2>
+          <h3 class="table__heading">420 миллионов</h3>
           <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
           <p class="table__text">Всемирный Банк, 2017</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">17–20 лет</h2>
+          <h3 class="table__heading">17–20 лет</h3>
           <p class="table__text">Пик обучаемости</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">1885 год</h2>
+          <h3 class="table__heading">1885 год</h3>
           <p class="table__text">Открытие кривой забывания</p>
         </div>
         <div class="table__cell">
-          <h2 class="table__heading">1889 год</h2>
+          <h3 class="table__heading">1889 год</h3>
           <p class="table__text">Открытие условного рефлекса</p>
         </div>
       </div>
@@ -131,13 +130,13 @@
         <p class="khan__container_quote-author">Джордж Лукас</p>
         <p class="khan__container_quote-author-subline">Кинорежиссёр, продюсер</p>
         <div class="khan__book-container">
-          <img src="images/khan-book.jpg" alt="#" class="khan__book-container_book-pic">
-          <a href="#" class="khan__book-container_buy-link"><p class="khan__book-container_buy-link_text">Купить книгу →</p></a>
+          <img src="images/khan-book.jpg" alt='Обложка книги "Весь мир - школа"' class="khan__book-container_book-pic">
+          <a href="#" class="khan__book-container_buy-link khan__book-container_buy-link_text">Купить книгу →</a>
         </div>
       </div> 
     </section>
     <section class="kaufman">
-      <img src="images/kaufman-triangle.svg"#" class="kaufman__triangle rotation_animated">
+      <img src="images/kaufman-triangle.svg" alt="Синий треугольник" class="kaufman__triangle rotation_animated">
       <h2 class="section_title_theme_dark">Принципы обучения</h2>
       <p class="section_subtitle_theme_dark">от Джоша Кауфмана</p>
       <div class="table_theme_dark">
@@ -187,30 +186,31 @@
       <h2 class="section_title">Полезные ресурсы</h2>
       <p class="section_subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
-        <a href="#"><div class="resources__link"><img src="images/logo/resources-arzamas.svg" alt="#"></a>     
+        <a href="#"><div class="resources__link"><img src="images/logo/resources-arzamas.svg" alt='Надпись "Arzamas"'></a>     
       </div>
       <div class="resources__link">
-        <a href="#"><img src="images/logo/resources-n1.svg" alt="#"></a>
+        <a href="#"><img src="images/logo/resources-n1.svg" alt='Надпись "N + 1"'></a>
       </div>
       <div class="resources__link">
-        <a href="#"><img src="images/logo/resources-strelka.svg" alt="#"></a>
+        <a href="#"><img src="images/logo/resources-strelka.svg" alt='Надпись "STRELKA"'></a>
       </div>
       <div class="resources__link">
-        <a href="#"><img src="images/logo/resources-polka.svg" alt="#"></a>
+        <a href="#"><img src="images/logo/resources-polka.svg" alt='Надпись "ПОЛКА"'></a>
       </div>
     </section>
-    <footer>
+  </main>
+  <footer>
       <div class="columns">
         <div class="footer__column_content_copyright">
-          <img src="images/logo_place_footer.svg" alt="#" class="logo__place_footer">
+          <img src="images/logo_place_footer.svg" alt='Логотип "Яндекс Практикум"' class="logo__place_footer">
           <h2 class="footer_author">&copy; Виктор Абанькин</h2>
         </div>
         <nav class="footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-            <li  class="footer__column-link"><a href="#" class="footer__column-link-text">Главная</a></li>
-            <li  class="footer__column-link"><a href="#" class="footer__column-link-text">Концепция</a></li>
-            <li  class="footer__column-link"><a href="#" class="footer__column-link-text">Наставники</a></li>
+            <li><a href="#" class="footer__column-link footer__column-link-text">Главная</a></li>
+            <li><a href="#" class="footer__column-link footer__column-link-text">Концепция</a></li>
+            <li><a href="#" class="footer__column-link footer__column-link-text">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column_content_social">
@@ -234,6 +234,6 @@
           </ul>  
         </nav>
       </div>
-    </footer>
-  </body>
+  </footer>
+</body>
 </html>
