--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="page">
   <header class="header">
-      <img src="images/logo_place_header.svg" alt='Логотип "Яндекс Практикум"' class="logo__place_header">
+      <img src="images/logo_place_header.svg" alt='Логотип "Яндекс Практикум"' class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
         <a href="#" class="header__link">Узнать →</a>
@@ -87,7 +87,7 @@
       <p class="section_subtitle">Про учёбу и мозг</p>
       <div class="table">
         <div class="table__cell">
-          <h2 class="table__cell_heading">86 миллиардов</h2>
+          <h3 class="table__heading">86 миллиардов</h3>
           <p class="table__text">Число нейронов в мозге человека</p>
         </div>
         <div class="table__cell">
@@ -199,11 +199,11 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
       <div class="columns">
         <div class="footer__column_content_copyright">
-          <img src="images/logo_place_footer.svg" alt='Логотип "Яндекс Практикум"' class="logo__place_footer">
-          <h2 class="footer_author">&copy; Виктор Абанькин</h2>
+          <img src="images/logo_place_footer.svg" alt='Логотип "Яндекс Практикум"' class="logo_place_footer">
+          <h2 class="footer__author">&copy; Виктор Абанькин</h2>
         </div>
         <nav class="footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
@@ -217,17 +217,17 @@
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul  class="footer__column-links">   
             <li class="footer__column-link">  
-              <a href="#" class="footer__column-link-li"><img src="images/youtube-icon.svg" alt="#" class="social-icon">
+              <a href="#" class="footer__column-link-li"><img src="images/youtube-icon.svg" alt='Логотип "YouTube"' class="social-icon">
               <p class="footer__column-link-text">YouTube</p>
               </a>
             </li> 
             <li  class="footer__column-link">
-              <a href="#" class="footer__column-link-li"><img src="images/vk_color_white.svg" alt="#" class="social-icon">
+              <a href="#" class="footer__column-link-li"><img src="images/vk_color_white.svg" alt='Логотип "ВКонтакте"' class="social-icon">
               <p class="footer__column-link-text">ВКонтакте</p>
               </a>
             </li>
             <li class="footer__column-link">
-              <a href="#" class="footer__column-link-li"><img src="images/tiktok-icon.svg" alt="#" class="social-icon">
+              <a href="#" class="footer__column-link-li"><img src="images/tiktok-icon.svg" alt='Логотип "ТикТок"' class="social-icon">
               <p class="footer__column-link-text">TikTok</p>
               </a>
             </li>
