--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
     </section>
     <nav class="techniques">
-      <h2 class="section_title">Техники обучения</h2>
-      <p class="section_subtitle">Пять практик от Барбары Оакли</p>
+      <h2 class="section-title">Техники обучения</h2>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
       <ul class="cards">
         <li class="cards__item">
           <img src="images/cards-attention.png" alt="Книга в руках" class="cards__image">
