--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="header__link">Узнать →</a>
       </p>
       <img src="images/header-image.png" alt="Картина грустного мальчика с весёлой собакой" class="header__main-illustration">
-      <div class="header__square-pic rotation_animated"></div>
+      <div class="header__square-pic rotation"></div>
   </header>
   <main>
     <section class="description">
@@ -27,7 +27,7 @@
         </div>
       </div>
     </section>
-    <nav class="techniques">
+    <section class="techniques">
       <h2 class="section-title">Техники обучения</h2>
       <p class="section-subtitle">Пять практик от Барбары Оакли</p>
       <ul class="cards">
@@ -56,7 +56,7 @@
           <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
         </li>
-      </nav>
+      </ul>
     </section>
     <section class="video"> 
       <h2 class="section-title">Видео на TED</h2>
@@ -68,7 +68,7 @@
     </section>
     <section class="oakley"> 
       <div class="two-columns">
-        <h2 class="two-columns__brief">История Барбарь Оакли</h2>
+        <h2 class="two-columns__brief">История Барбары Оакли</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
         </div>
@@ -80,7 +80,7 @@
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее →</a>
     </section> 
-    <nav class="digits">
+    <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
       <p class="section-subtitle">Про учёбу и мозг</p>
       <ul class="table">
@@ -119,13 +119,13 @@
           <p class="table__text">Открытие условного рефлекса</p>
         </li>
       </ul>
-    </nav>
+    </section>
     <section class="khan">  
       <div class="khan__container">
         <h2 class="khan__author">Салман Хан</h2>
         <p class="khan__title">Весь мир - школа</p>
         <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p> 
-        <p class="khan__author">Джордж Лукас</p>
+        <p class="khan__quote-author">Джордж Лукас</p>
         <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
         <div class="khan__book-container">
           <img src="images/khan-book.jpg" alt='Обложка книги "Весь мир - школа"' class="khan__book-pic">
@@ -133,54 +133,54 @@
         </div>
       </div> 
     </section>
-    <nav class="kaufman">
-      <div class="kaufman__triangle rotation_animated">
+    <section class="kaufman">
+      <div class="kaufman__triangle rotation">
       </div> 
-      <h2 class="section_title section_title_theme_dark">Принципы обучения</h2>
-      <p class="section_subtitle section_subtitle_theme_dark">от Джоша Кауфмана</p>
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+      <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
       <ul class="table table_theme_dark">
-        <li class="table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">1</h2>
+        <li class="table__cell table__cell_theme_dark">
+          <h3 class="table__heading table__heading_theme_dark">1</h3>
           <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">2</h2>
+          <h3 class="table__heading table__heading_theme_dark">2</h3>
           <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">3</h2>
+          <h3 class="table__heading table__heading_theme_dark">3</h3>
           <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">4</h2>
+          <h3 class="table__heading table__heading_theme_dark">4</h3>
           <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">5</h2>
+          <h3 class="table__heading table__heading_theme_dark">5</h3>
           <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">6</h2>
+          <h3 class="table__heading table__heading_theme_dark">6</h3>
           <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">7</h2>
+          <h3 class="table__heading table__heading_theme_dark">7</h3>
           <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">8</h2>
+          <h3 class="table__heading table__heading_theme_dark">8</h3>
           <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">9</h2>
+          <h3 class="table__heading table__heading_theme_dark">9</h3>
           <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
         </li>
         <li class="table__cell table__cell_theme_dark">
-          <h2 class="table__heading table__heading_theme_dark">10</h2>
+          <h3 class="table__heading table__heading_theme_dark">10</h3>
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-    </nav>
+    </section>
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
@@ -196,22 +196,22 @@
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <img src="images/logo_place_footer.svg" alt='Логотип "Яндекс Практикум"' class="logo logo_place_footer">
-        <h2 class="footer__author">&copy; Виктор Абанькин</h2>
+        <p class="footer__author">&copy; Виктор Абанькин</p>
       </div>
       <nav class="footer__column footer__column_content_info">
         <h2 class="footer__column-heading">О Практикуме</h2>
         <ul class="footer__column-links">
-          <li><a href="#" class="footer__column footer__column-link">Главная</a></li>
-          <li><a href="#" class="footer__column footer__column-link">Концепция</a></li>
-          <li><a href="#" class="footer__column footer__column-link">Наставники</a></li>
+          <li><a href="#" class="footer__column-link">Главная</a></li>
+          <li><a href="#" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" class="footer__column-link">Наставники</a></li>
         </ul>
       </nav>
       <nav class="footer__column footer__column_content_social">
         <h2 class="footer__column-heading">Соцсети</h2>
         <ul class="footer__column-links">   
-          <li><a href="#" class="footer__column footer__column-link"><img src="images/youtube-icon.svg" alt='Логотип "YouTube"' class="social-icon">YouTube</a></li> 
-          <li><a href="#" class="footer__column footer__column-link"><img src="images/vk_color_white.svg" alt='Логотип "ВКонтакте"' class="social-icon">ВКонтакте</a></li>
-          <li><a href="#" class="footer__column footer__column-link"><img src="images/tiktok-icon.svg" alt='Логотип "ТикТок"' class="social-icon">TikTok</a></li>
+          <li><a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt='Логотип "YouTube"' class="social-icon">YouTube</a></li> 
+          <li><a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt='Логотип "ВКонтакте"' class="social-icon">ВКонтакте</a></li>
+          <li><a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt='Логотип "ТикТок"' class="social-icon">TikTok</a></li>
         </ul>  
       </nav>
     </div>
