--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
       <nav class="footer__column footer__column_content_social">
         <h2 class="footer__column-heading">Соцсети</h2>
         <ul class="footer__column-links">   
-          <li><a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt='Логотип "YouTube"' class="social-icon">YouTube</a></li> 
-          <li><a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt='Логотип "ВКонтакте"' class="social-icon">ВКонтакте</a></li>
-          <li><a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt='Логотип "ТикТок"' class="social-icon">TikTok</a></li>
+          <li><a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt='Логотип "YouTube"' class="footer__social-icon">YouTube</a></li> 
+          <li><a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt='Логотип "ВКонтакте"' class="footer__social-icon">ВКонтакте</a></li>
+          <li><a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt='Логотип "ТикТок"' class="footer__social-icon">TikTok</a></li>
         </ul>  
       </nav>
     </div>
